# zunel

./: .gitignore  LICENSE  README.md
.github/workflows/: deb.yml  release.yml  rust-ci.yml
docs/: README.md  chat-commands.md  configuration.md  deployment.md  instance-as-mcp.md  memory.md  quick-start.md  user-guide.md
rust/: Cargo.toml
rust/crates/zunel-channels/: Cargo.toml
rust/crates/zunel-cli/: Cargo.toml
rust/crates/zunel-cli/src/: oauth_callback.rs  repl.rs
rust/crates/zunel-cli/tests/: mcp_cli_test.rs
rust/crates/zunel-config/src/: lib.rs  loader.rs  mcp_oauth.rs  schema.rs
rust/crates/zunel-core/: Cargo.toml
rust/crates/zunel-core/src/: agent_loop.rs  command.rs  compaction.rs  default_tools.rs  dream_tool.rs  lib.rs  memory.rs  memory_repo.rs  runner.rs  subagent.rs
rust/crates/zunel-core/tests/: agent_loop_memory_test.rs  agent_loop_reload_test.rs  agent_loop_stream_test.rs  compaction_test.rs  dream_end_to_end_test.rs  hook_test.rs  idle_compact_trigger_test.rs  mcp_reconnect_tool_test.rs  mcp_registry_test.rs  memory_test.rs  runner_cancel_test.rs  runner_settings_test.rs  runner_tool_loop_test.rs  runner_usage_test.rs  self_state_live_test.rs  session_manager_test.rs
rust/crates/zunel-cron/src/: lib.rs
rust/crates/zunel-mcp/: Cargo.toml
rust/crates/zunel-mcp-self/: Cargo.toml
rust/crates/zunel-mcp-slack/: Cargo.toml
rust/crates/zunel-providers/: Cargo.toml
rust/crates/zunel-tools/: Cargo.toml
rust/crates/zunel-util/: Cargo.toml
rust/crates/zunel-util/src/: http.rs  lib.rs  net.rs
scripts/: check.sh
(+44 files in other folders)
